<resources>
    <string name="app_name">Triviyou</string>
    <string name="password">סיסמה</string>
    <string name="repeatPassword">אימות סיסמה</string>
    <string name="newPassword">סיסמה חדשה</string>
    <string name="repeatNewPassword">אימות סיסמה חדשה</string>
    <string name="createrAccount">צור משתמש</string>
    <string name="reg">ליצירת חשבון חדש </string>
    <string name="login">להתחברות</string>
    <string name="back">חזור</string>
    <string name="backLogin">חזור להתחברות</string>
    <string name="backSignup">חזור להרשמה</string>
    <string name="emptyStatement">יש למלא את כל השדות</string>
    <string name="messageEmptyOrInvalid">אימייל או סיסמה אינם תקינים, נסה שוב</string>
    <string name="messagePassword">אורך הסיסמה חייב להיות 6 תווים לפחות</string>
    <string name="messageEmptyPassword">מלאו את כל השדות</string>
    <string name="messageNotEqualPasswords">הסיסמאות לא תואמות, נסה שוב</string>
    <string name="guide">מדריך למתחילים</string>
    <string name="letsPlay">בחרו משחק</string>
    <string name="startPlay">התחילו לשחק!</string>
    <string name="close">סגור</string>
    <string name="nextQuestion">לשאלה הבאה</string>
    <string name="iWantChangePass">אני רוצה לשנות סיסמה</string>
    <string name="change">שנה</string>
    <string name="emailAlreadyExists">אימייל זה כבר קיים במערכת</string>
    <string name="ErrorCheckingEmail">שגיאה בבדיקת האימייל</string>
    <string name="registeredSuccessfuly">נרשמת בהצלחה</string>
    <string name="iWantLogOut">להתנתקות</string>
    <string name="statusMessage">רמה: %d/%d</string>
    <string name="wrongAnswerTryAgain">טעית. נסו שוב!</string>
    <string name="textGuide">ברוכים הבאים לTRIVIYOU – משחקי טריוויה בנושאים שונים!
ברשימת המשחקים תוכלו לבחור את התחום שמעניין אתכם ביותר – מתמטיקה, מדינות, צרפתית ועוד. כל משחק כולל מספר שאלות, ולכל שאלה ארבע תשובות אפשריות. רק אחת מהן נכונה! כל שאלה מוקצב זמן מוגבל, אך אם הזמן נגמר, תוכלו עדיין לבחור תשובה ולהמשיך במשחק בקצב שלכם. כך, תוכל לשמור על חוויית משחק מאתגרת, אך ללא לחץ, ולשלוט בקצב שבו אתם מתקדמים. \n
ככל שתתקדמו ותענו נכון, השאלות יהפכו למאתגרות יותר, כך שתמיד תמצאו את עצמכם לומדים ומשתפרים. \n
באפליקציה תוכלו גם \n
☑️ לשנות את תמונת הפרופיל שלכם \n
 ☑️לעדכן את הסיסמה שלכם \n
☑️ לצפות במדריך זה שוב בכל רגע שתרצו לרענן את זיכרונכם בנוגע לפעולות השונות באפליקציה \n
מוכנים לאתגר? 🚀 \n

</string>
    <string name="soon">בקרוב</string>
    <string name="finishGame">סיימת את המשחק!\n</string>
    <string name="goodJob">כל הכבוד! סיימת את המשחק</string>
    <string name="backToGames">בחזרה לרשימת המשחקים\n</string>
    <string name="chooseImageSource">בחר מקור תמונה</string>
    <string name="gallery">גלריה</string>
    <string name="camera">מצלמה</string>
    <string name="gameOver">המשחק נגמר</string>
    <string name="goodJobToTheList">אלופים, קדימה למשחק הבא</string>
    <string name="didntFinish">" משחקים שטרם סיימת"</string>
    <string name="thereAre">"נותרו "</string>
    <string name="allThe">"סיימת את כל המשחקים שהתחלת, כל הכבוד"</string>
    <string name="finishGamesCompliment">"המשחקים שהתחלת, סיימת! כל הכבוד! "</string>
    <string name="passwordUpdatedSuccessfully">סיסמה שונתה בהצלחה\n</string>
    <string name="passwordUpdateFailed">עדכון הסיסמה נכשל</string>
    <string name="questionNumber">"שאלה מספר "</string>
    <string name="correctAnswer">"התשובה הנכונה: "</string>
    <string name="level">"רמה: "</string>
    <string name="seconds">" שניות"</string>
    <string name="noAnswerSelected">לא נבחרה תשובה</string>
    <string name="timesOut">תם הזמן. הזדרזו בפעם הבאה!</string>
    <string name="areLeft">"נותרו "</string>
    <string name="startGameAgain">"אני רוצה לשחק שוב"</string>
    <string name="shortPasswordChange">העדכון נכשל, נסה סיסמה ארוכה יותר\n\n</string>
    <string name="numberOfFailures">"מספר הטעויות שלך הוא: "</string>
    <string name="noInternetConnection">אין חיבור לאינטרנט</string>
    <string name="reminding">TRIVIYOU</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="sureLogOut">אתה בטוח שאתה רוצה להתנתק?</string>
    <string name="cameraPermissionsRequired">נדרשות הרשאות מצלמה</string>
    <string name="errorFetchingData">שגיאה בשליפת הנתונים</string>
    <string name="unexpectedErrorOccurred">אירעה שגיאה לא צפויה</string>
    <string name="registrationFailed">"הרשמה נכשלה"</string>
    <string name="automaticTransition">"מעבר אוטומטי בעוד "</string>
    <string name="errorDeletingGame">שגיאה במחיקת המשחק</string>
    <string name="noQuestionFound">לא נמצאו שאלות</string>
    <string name="shortDescription">תיאור קצר של המשחק</string>
    <string name="gameName">שם המשחק</string>
    <string name="welcome">ברוכים הבאים</string>
    <string name="enterEmail"> כתובת אימייל</string>
    <string name="enterPassword"> סיסמה</string>
    <string name="registration">הרשמה</string>
    <string name="reminderContinuePlaying">מזמינים אותך להמשיך לשחק!\n</string>
    <string name="podiumText">הנך מוביל במשחק👑</string>
</resources>