<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="#F9F9F9"
    tools:context=".SummaryActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textColor="#004680"
        android:layout_marginTop="150dp"
        android:textSize="30dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:text="@string/goodJob" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/finishGame"
        android:textColor="#000000"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvResults"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text=""
        android:textColor="#000000"
        android:textSize="20dp" />


    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textColor="#000000"
        android:textSize="20dp"
        android:gravity="center"
        android:text="" />

    <Button
        android:id="@+id/bBackGamesList"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#58728C"
        android:fontFamily="serif"
        android:text="@string/backToGames"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/bStartGame"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:backgroundTint="#8195B3"
        android:fontFamily="serif"
        android:text="@string/startGameAgain"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold" />
</LinearLayout>