<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".changePasswordFragment">


    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_background"
        android:ems="10"
        android:hint="@string/newPassword"
        android:gravity="right"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:fontFamily="serif"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etRepeatNewPassword"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/round_background"
        android:hint="@string/repeatNewPassword"
        android:gravity="right"
        android:textColor="#333333"
        android:textColorHint="#000000"
        android:fontFamily="serif"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bChangePassword"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:backgroundTint="#004680"
        android:fontFamily="serif"
        android:text="@string/change"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold" />
</FrameLayout>