<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:padding="15dp"
    android:background="#F9F9F9" >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/imgBback1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:backgroundTint="#F9F9F9"
            app:srcCompat="@drawable/back" />

        <ImageButton
            android:id="@+id/imgBguide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="280dp"
            android:backgroundTint="#F9F9F9"
            app:srcCompat="@drawable/userguide" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="הרשמה"
        android:textColor="#004680"
        android:textStyle="bold"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/emailEtRegister"
        android:layout_marginTop="20dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/round_background"
        android:fontFamily="serif"
        android:gravity="right"
        android:hint="כתובת אימייל"
        android:inputType="textEmailAddress"
        android:textColor="#333333"
        android:textColorHint="#333333" />

    <EditText
        android:id="@+id/passwordEtRegister"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_background"
        android:fontFamily="serif"
        android:gravity="right"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#333333"
        android:textColorHint="#333333" />

    <EditText
        android:id="@+id/repeatPasswordEtRegister"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/repeatPassword"
        android:inputType="textPassword"
        android:textColorHint="#3d6664"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:background="@drawable/round_background"
        android:gravity="right"
        android:textColor="#333333" />

    <Button
        android:id="@+id/btnCreateAcc"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#004680"
        android:fontFamily="serif"
        android:text="@string/createrAccount"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold" />

</LinearLayout>